--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,12 @@ body{
     width: 100%;
     height: 100%;
 }
-.Main-Tittle{
+#text{
     text-align: center;
     color: aliceblue;
     text-shadow: 0px 0px 10px rgb(0, 0, 0);
     z-index: 1000;
+    position: absolute;
 }
 
 .contenedor {
@@ -174,7 +175,7 @@ font-size: 1.2rem;
 
 .size{
        width: 100%;
-        max-width: 6rem;
+        max-width: 1rem;
         z-index: 1000;
 }
 }
