--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,20 @@ body{
     height: 100%;
 }
 #text{
-    text-align: center;
+
     color: aliceblue;
     text-shadow: 0px 0px 10px rgb(0, 0, 0);
     z-index: 1000;
+
+}
+.Container{
+    margin: 0 auto;
+    text-align: center;
     position: absolute;
+    top: 5%;
+    left: 50%;
+transform: translate(-50%, -50%);
+
 }
 
 .contenedor {
@@ -23,7 +32,7 @@ body{
 }
 
 .size{
-    width: 4%;
+    width: 4% !important;
 
     
 }
@@ -41,6 +50,7 @@ display: none;
     width: 100%;
     transform: translateX(130px) translateY(195px)  rotate(13deg);
     max-width: 7.1rem;
+    display: none;
     
 }
 .Garlands-Reverse{
@@ -49,7 +59,7 @@ display: none;
     height: 8rem;
 margin: 0;
 max-width: 7.1rem;
- 
+ display: none;
 }
 
 .contenedor img{
@@ -74,12 +84,15 @@ transform: translateY(135vh) scale(0);
  border: 10px solid white;
  border-radius: 2rem ;
 
+
 }
 .Flex-Content{
     display: flex;
     justify-content: center;
-    flex-direction: row-reverse;
-    
+    flex-direction: row-reverse !important;
+    align-items: center;
+    flex-wrap: wrap !important;
+                      
 }
 .Flex-Text{
     padding: 0 5rem;
@@ -90,6 +103,7 @@ transform: translateY(135vh) scale(0);
     color: rgb(228, 228, 228);
 text-transform: uppercase;
 text-align: end;
+padding: 3rem 0;
 }
 .Image-Flower{
     transform: scaleX(-1); 
@@ -105,6 +119,7 @@ text-align: end;
     width: 100px;
     height: 90px;
     margin: 0 auto;
+filter: drop-shadow(0px 0px 50px red);
   }
   
   .heart::before,
@@ -120,6 +135,7 @@ text-align: end;
     border-radius: 50px 50px 0 0;
     transform: rotate(-45deg);
     transform-origin: 0 100%;
+    filter: drop-shadow(0px 0px 50px red);
   }
   
   .heart::after {
@@ -132,9 +148,18 @@ text-align: end;
     color: rgb(255, 118, 118);
     font-family: cursive;
     text-align: center;
+
 }
 
 @media (max-width : 900px) and (min-width : 300px) { 
+
+    #text{
+font-size: 1.3rem;
+        color: rgb(159, 210, 255);
+        text-shadow: 0px 0px 10px rgb(0, 0, 0);
+        z-index: 1000;
+    
+    }
     .Image-Flower{
         transform: scaleX(-1); 
     
@@ -152,36 +177,54 @@ text-align: end;
 
  display: none;
 }
-
 .Section-Main{
- 
-    margin: 2rem 1rem;
+    margin: 0 0 !important;
     padding: 4rem 0;
-    border: 5px solid white;
-    border-radius: 2rem ;
-   
+    border: 10px solid white;
+    border-radius: 2rem;
+    width: 100% !important;
    }
-   .Flex-Content{
+   
+}
+
+.Flex-Content{
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: row-reverse;
+    align-items: center;
+    flex-wrap: wrap;
     
 }
 .Styles-TITTLE{
-    color: rgb(229, 155, 233);
-font-size: 1.2rem;
-    
+color: rgb(229, 155, 233);
+font-size: 1.2rem;    
 }
-
 .size{
-       width: 100%;
-        max-width: 2rem ;
-  
-}
+width: 2%;
 }
 
+.Flex-Text{
+    padding: 0 0 ;
+}
 @media (max-width : 1024px) and (min-width : 768px) {
 
+    .Flex-Content{
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+        align-items: center;
+        flex-wrap: wrap;
+    
+    }
+        .Section-Main{
+ 
+        margin: 6rem 0 !important;
+        padding: 4rem 0;
+        border: 10px solid white;
+        border-radius: 2rem;
+        width: 100% !important;
+       }
+}
 
 
   
